# lvim-db

./: README.md
doc/: lvim-db.txt
docker/: compose.yaml  seed.lua
lua/lvim-db/: cmp.lua  commands.lua  config.lua  daemon.lua  health.lua  highlights.lua  init.lua  keyring.lua  query.lua  store.lua
lua/lvim-db/ui/: drawer.lua  editor.lua  form.lua  notes.lua  result.lua  workspace.lua
native/: Cargo.toml  build.sh
native/src/: driver.rs  main.rs  net.rs  registry.rs  rpc.rs  secret.rs  server.rs  spec.rs  tls.rs  vault.rs
native/src/drivers/: buffered.rs  clickhouse.rs  cql.rs  duckdb.rs  firebird.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  redis.rs  snowflake.rs  sqlite.rs
